--- a/components/explore.html
+++ b/components/explore.html
@@ -133,10 +133,12 @@
                     .comparisonTable-maxDollarValue-container {
                         width: 100%;
                         height: 100%;
-                        display:grid;
-                        grid-template-columns: auto auto auto auto;
+                        display:flex;
+                        flex-direction: row;
+                        flex-wrap: nowrap;
                     }
                         .comparisonTable-maxDollarValue {
+                            /* flex: 1 0 auto; */
                             padding: 10px 24px;
                         }
 
@@ -553,12 +555,13 @@
             }
             uniqueDollarAmmounts.push(dollarammount);
         }
+
         var totalCells = uniqueDollarAmmounts.length;
         uniqueDollarAmmounts = uniqueDollarAmmounts.filter((tag, index, array) => array.findIndex(t => t.description == tag.description && t.note == tag.note) == index);
         var actualCells = uniqueDollarAmmounts.length;
 
+        var elementCount = 0;
         for (var l = 0; l < uniqueDollarAmmounts.length; l++) {
-            var elementCount = 0;
             var maxDollar = document.createElement("div");
            
             maxDollar.classList.add("comparisonTable-maxDollarValue");
@@ -572,7 +575,12 @@
                 maxDollar.append(note);
             }
             if(totalCells/actualCells != 1 && elementCount == 0) {
-                maxDollar.style.width = 66 + "%";
+                console.log($(titles).width())
+                maxDollar.style.flex = "1 0 66%";
+            }
+            if(totalCells/actualCells != 1 && elementCount == 1) {
+                console.log($(titles).width())
+                maxDollar.style.flex = "1 0 33%";
             }
             maxDollarValue.append(maxDollar);
             elementCount++;
